fix alignment

--- a/frontend/src/App.module.scss
+++ b/frontend/src/App.module.scss
@@ -119,8 +119,8 @@
 .books-container,
 .pinnedSection {
   display: flex;
-  gap: 1rem;
+  gap: 1.5rem;
   flex-wrap: wrap;
-  justify-content: space-between;
+  justify-content: flex-start;
   width: 100%;
 }
